@@ -54,11 +54,9 @@ public class SecurityConfig {
 
 
 	@Bean
-	SecurityFilterChain filterChain(HttpSecurity http, AuthenticationManager authenticationManager) throws Exception {
-		CustomUsernamePasswordAuthenticationFilter usernamePasswordAuthenticationFilter =
-			new CustomUsernamePasswordAuthenticationFilter(authenticationManager, authenticationSuccessHandler, authenticationFailureHandler);
+	SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
-		http
+			http
 			// ✅ 보안 관련 설정 (CSRF, CORS, 세션)
 			.csrf(AbstractHttpConfigurer::disable) // CSRF 비활성화 (JWT 사용 시 불필요)
 			.cors(cors -> corsConfigurationSource()) // CORS 설정 적용
@@ -66,18 +64,14 @@ public class SecurityConfig {
 
 			// ✅ 필터 설정 (JWT 인증 필터 → UsernamePasswordAuthenticationFilter)
 			.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-			.addFilterAt(usernamePasswordAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
 
 			// ✅ OAuth2 로그인 설정
 			.oauth2Login(oauth2 -> oauth2
 				.userInfoEndpoint(userInfoEndpointConfig -> userInfoEndpointConfig
 					.userService(oAuth2UserService)) // 사용자 정보 서비스 설정
-				.successHandler(authenticationSuccessHandler)) // OAuth2 로그인 성공 핸들러
-
-			// ✅ 로그아웃 설정
-			.logout(logout -> logout
-				.logoutRequestMatcher(new AntPathRequestMatcher("/api-v1/members/logout", "DELETE")) // DELETE 요청 허용
-				.logoutSuccessHandler(logoutSuccessHandler)) // 로그아웃 성공 핸들러
+				.successHandler(authenticationSuccessHandler) // OAuth2 로그인 성공 핸들러
+				.failureHandler(authenticationFailureHandler) // OAuth2 로그인 실패 핸들러
+			)
 
 			// ✅ 인증 및 접근 권한 설정
 			.authorizeHttpRequests(authorize -> authorize
@@ -92,8 +86,8 @@ public class SecurityConfig {
 
 			// ✅ 예외 처리 설정
 			.exceptionHandling(exceptionHandling -> exceptionHandling
-				.authenticationEntryPoint(authenticationEntryPoint) // 인증 실패 핸들러
-				.accessDeniedHandler(accessDeniedHandler)); // 접근 거부 핸들러
+				.authenticationEntryPoint(authenticationEntryPoint) // 인증이 수행되지 않았을 때 호출되는 핸들러
+				.accessDeniedHandler(accessDeniedHandler)); // 접근 권한이 없을 때 호출되는 핸들러
 
 		return http.build();
 	}
@@ -103,7 +97,7 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 		// 허용할 오리진 설정
 		configuration.setAllowedOrigins(
-			Arrays.asList(AppConfig.getSiteFrontUrl(), "http://localhost:3000")); // 프론트 엔드 포트번호
+			List.of(AppConfig.getSiteFrontUrl())); // 프론트 엔드
 		// 허용할 HTTP 메서드 설정
 		configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE")); // 프론트 엔드 허용 메서드
 		// 자격 증명 허용 설정
@@ -111,7 +105,7 @@ public class SecurityConfig {
 		// 허용할 헤더 설정
 		configuration.setAllowedHeaders(Collections.singletonList("*"));
 
-		configuration.setExposedHeaders(Collections.singletonList("Authorization")); // client가 Authorization 헤더를 읽을 수 있도록 해야한다.
+		configuration.setExposedHeaders(List.of("Authorization","Set-Cookie")); // client가 Authorization 헤더를 읽을 수 있도록 해야한다.
 
 
 		// CORS 설정을 소스에 등록
